--- a/Strings/AppResources.de.resx
+++ b/Strings/AppResources.de.resx
@@ -1393,7 +1393,7 @@
     <value>Veröffentlicht oder aktualisiert im {0}</value>
     <comment>Released or updated in {0}</comment>
   </data>
-  <data name="AircraftPage.ShowLegacyAircraft" xml:space="preserve">
+  <data name="Settings.General.ShowLegacyAircraft.Title" xml:space="preserve">
     <value>Ältere Flugzeuge anzeigen</value>
     <comment>Show Legacy Aircraft</comment>
   </data>
