--- a/Strings/AppResources.es.resx
+++ b/Strings/AppResources.es.resx
@@ -1383,7 +1383,7 @@
   <data name="AircraftPage.ReleaseInfo" xml:space="preserve">
     <value>Actualizado en {0}</value>
   </data>
-  <data name="AircraftPage.ShowLegacyAircraft" xml:space="preserve">
+  <data name="Settings.General.ShowLegacyAircraft.Title" xml:space="preserve">
     <value>Mostrar Aviones Legacy</value>
   </data>
   <data name="AircraftPage.ShowProAircraft" xml:space="preserve">
