--- a/Strings/AppResources.zh.resx
+++ b/Strings/AppResources.zh.resx
@@ -1405,7 +1405,7 @@
     <value>发布/更新时间： {0}</value>
     <comment>Released or updated in {0}</comment>
   </data>
-  <data name="AircraftPage.ShowLegacyAircraft" xml:space="preserve">
+  <data name="Settings.General.ShowLegacyAircraft.Title" xml:space="preserve">
     <value>显示早期飞机</value>
     <comment>Show Legacy Aircraft</comment>
   </data>
@@ -2537,7 +2537,7 @@
     <value>连线飞行时，在机位上开启停机刹车后才能改变重量与配载设置</value>
     <comment>Activate Parking Brakes on the ramp to make changes to Weight and Balance in Live Mode</comment>
   </data>
-    <data name="SystemMessaging.Jetbridges.NoJetbridgesAvailableAtAirport" xml:space="preserve">
+  <data name="SystemMessaging.Jetbridges.NoJetbridgesAvailableAtAirport" xml:space="preserve">
     <value>该机场暂无可动廊桥</value>
     <comment>No jet bridges available at this airport</comment>
   </data>
@@ -2589,7 +2589,7 @@ Please ask to be assigned via the Scenery Editing forum first</comment>
     <value>制作人</value>
     <comment>Contributors</comment>
    </data>
-   <data name="UserAccountControl.Discord" xml:space="preserve">
+  <data name="UserAccountControl.Discord" xml:space="preserve">
     <value>Discord账户</value>
     <comment>Discord Account</comment>
   </data>
@@ -2613,7 +2613,7 @@ Please ask to be assigned via the Scenery Editing forum first</comment>
     <value>账号已绑定</value>
     <comment>Account Linked</comment>
   </data>
-    <data name="UserAccountControl.Discord.NotInstalled.Message" xml:space="preserve">
+  <data name="UserAccountControl.Discord.NotInstalled.Message" xml:space="preserve">
     <value>想加入IF官方Discord服务器需要先安装Discord.你要现在安装吗？（注意：中国大陆应用商店不提供下载）</value>
     <comment>Discord must be installed from the App Store to join the Infinite Flight Server. Do you want to install it now?</comment>
   </data>
